[workspace]
members = [
  "android",
  "input",
  "ios",
  "stdin",
]

[package]
name = "bevy-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bincode = "1.3.3"
console = "0.15.2"
log = "0.4.17"
once_cell = "1.15.0"
bevy_input = { path = "../../bevy/crates/bevy_input", features = ["serialize"] }

[dependencies]
bevy_core = { path = "../../bevy/crates/bevy_core", default-features = false }
bevy_log = { path = "../../bevy/crates/bevy_log", default-features = false, features = ["trace", "tracing-chrome"] }
bevy_audio = { path = "../../bevy/crates/bevy_audio", default-features = false, features = ["vorbis"] }
bevy_app = { path = "../../bevy/crates/bevy_app", default-features = false, features = ["trace"] }
bevy_asset = { path = "../../bevy/crates/bevy_asset", default-features = false, features = ["default"] }
bevy_text = { path = "../../bevy/crates/bevy_text", default-features = false }
bevy_transform = { path = "../../bevy/crates/bevy_transform", default-features = false  }
bevy_time = { path = "../../bevy/crates/bevy_time", default-features = false }
bevy_window = { path = "../../bevy/crates/bevy_window", default-features = false }
bevy_sprite = { path = "../../bevy/crates/bevy_sprite", default-features = false  }
bevy_ui = { path = "../../bevy/crates/bevy_ui", default-features = false }
bevy_derive = { path = "../../bevy/crates/bevy_derive", default-features = false }
bevy_math = { path = "../../bevy/crates/bevy_math", default-features = false }
bevy_utils = { path = "../../bevy/crates/bevy_utils", default-features = false }
bevy_core_pipeline = { path = "../../bevy/crates/bevy_core_pipeline", default-features = false, features = ["trace"] }
bevy_render = { path = "../../bevy/crates/bevy_render", default-features = false, features = ["trace"] }
bevy_winit = { path = "../../bevy/crates/bevy_winit", default-features = false, features = ["wayland"] }
bevy_ecs = { path = "../../bevy/crates/bevy_ecs", default-features = false, features = ["trace"] }
bevy_input.workspace = true

crossbeam = "0.8.2"

bincode.workspace = true
console.workspace = true

[profile.release]
lto = true
