[workspace]
members = [
  "android",
  "input",
  "ios",
  "physics",
  "stdin",
  "shared",
]

[package]
name = "bevy-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
console = "0.15.2"
log = "0.4.17"
once_cell = "1.15.0"
crossbeam = "0.8.2"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
flate2 = "1.0.25"
env_logger = "0.10.0"

bevy_core = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_input = { git = "https://github.com/bwqr/bevy", branch = "edge", features = ["serialize"] }
bevy_app = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_asset = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false, features = ["default"] }
bevy_render = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_window = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_time = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_winit = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false, features = ["wayland"] }
bevy_log = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_ecs = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_pbr = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_transform = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false  }
bevy_sprite = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false  }
bevy_ui = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_derive = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_math = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_utils = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_core_pipeline = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_scene = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_hierarchy = { git = "https://github.com/bwqr/bevy", branch = "edge", default-features = false }
bevy_rapier3d = { git = "https://github.com/bwqr/bevy_rapier", branch = "edge", features = ["dim3", "debug-render-3d"] }

[dependencies]
shared = { path = "./shared" }

bevy_core.workspace = true
bevy_app = { workspace = true, features = ["trace"] }
bevy_asset.workspace = true
bevy_transform.workspace = true
bevy_time.workspace = true
bevy_window.workspace = true
bevy_log = { workspace = true, features = ["tracing-tracy"] }
bevy_sprite.workspace = true
bevy_ui.workspace = true
bevy_derive.workspace = true
bevy_math.workspace = true
bevy_utils.workspace = true
bevy_core_pipeline.workspace = true
bevy_render = { workspace = true, features = ["trace"] }
bevy_winit.workspace = true
bevy_ecs = { workspace = true } #features = ["trace"]
bevy_pbr.workspace = true
bevy_input.workspace = true
bevy_rapier3d.workspace = true
bevy_scene.workspace = true
bevy_hierarchy.workspace = true

crossbeam.workspace = true
bincode.workspace = true
env_logger.workspace = true
log.workspace = true
ron.workspace = true
serde.workspace = true

[profile.dev]
opt-level = "z"
debug = false
debug-assertions = false

[profile.release]
# lto = true
