[package]
name = "android"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevyedge"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../input" }

libc = "0.2.134"

log.workspace = true

jni = { version = "0.19.0", default-features = false }
