[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "physics"
path = "src/lib.rs"

[dependencies]
bevy_ecs.workspace = true
bevy_transform.workspace = true
bevy_time.workspace = true
bevy_rapier3d = { workspace = true, features = ["serde-serialize"] }
bincode.workspace = true
serde.workspace = true

crossbeam.workspace = true

log.workspace = true
env_logger = "0.10.0"
