[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true
bevy_rapier3d = { workspace = true, features = ["serde-serialize"] }
bevy_transform.workspace = true
bincode.workspace = true
flate2.workspace = true
log.workspace = true
serde.workspace = true
